package com.hailo-platform/H2O.kernel.discovery.unregister;

message Request {
	required string instanceId = 1;
}

message Response {
}
